--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -4,7 +4,7 @@ pdf_dpi = 100
 svg_background_color = white #background color of whole figure
 
 # plot feature type
-feature_keywords = gene,circle,ytick,depth_hist,xxxxx # *, gene,point,hist,heatmap
+feature_keywords = gene,circle,ytick,plot_depth,xxxxx # *, gene,point,hist,heatmap
 feature_setting = feature.color.label.conf10.new # *
 
 # figure width layout
@@ -50,12 +50,6 @@ connect_stroke_dasharray=2,5
 connect_stroke_width=2
 connect_stroke_color=black
 absolute_postion_in_title=yes
-## feature yticks
-#feature_ytick_region=All:0-3:0-10:(the depth1);3.1-5.1:1-5:(the depth2) # mean two ytick axis: ytick = 0-10 and 1-5. 0-3 and 4-6 is the feature_shift_y, should adjust by real situanition
-feature_ytick_region=s2:s2000:10:40:0:10:r:(the detph1);50:80:1:5:l:(the depth2) s4:s40000:20:80:90:100:r:(the depth3) # ^sample:scaffold_id: # mean two ytick axis: ytick = 0-10 and 1-5. 0-3 and 4-6 is the feature_shift_y, should adjust by real situanition
-feature_ytick_hgrid_line = 0 # 0 or fill:black,stroke,opacity
-
-# 0.5 / 0.05*genome_height_ratio = 0.5 * ytick region
 ## global setting end, specific setting in feature_setting
 
 
@@ -86,7 +80,7 @@ legend_stroke_color=black
 legend_stroke_width=0.5
 
 # crossling among features
-crossing_link = feature.crossing.link.conf9
+crossing_link = feature.crossing.link.conf9.new
 cross_link_color = #FF8C00
 cross_link_opacity = 1
 cross_link_anchor_pos = low_up # up,medium,low
@@ -121,12 +115,13 @@ scale_tick_fontsize=13
 # 20->30 is for show
 #depth_hist = s2,s2000,0,100,path_map.sort.bam,0->50,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:black,1:0.3,1:0.5
 #depth_hist = s2,s2000,0,100,path_map.sort.bam,60->90,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:green,1:0.3,1:0.5
-depth_hist = s3,s3,1,100,s3.s3.depth.txt,5->55,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:black,1:0.5,1:0.5,6:6
-depth_hist = s3,s3,1,100,s3.s3.depth.txt,65->95,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:black,1:0.5,1:0.5,6:6
-depth_hist = s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1,6:6
-depth_hist = s3,s3,3,100,s3.s3.depth.txt,30->80,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:green,1:0.3,1:1,7:7
-depth_scatter= ee
-depth_scatter_line=ee
+#$sample,$scf,$block_flag,$window_size,$depth_file,$yaxis,$ytick_flag,$yaxis_show,$ytick_label,$hgrid_flag,$tick_color,$tick_opacity,$tick_border,$label_size
+plot_depth = hist,s3,s3,1,100,s3.s3.depth.txt,5->55,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	highlight:26:2:green,hightlight:28:2:black
+plot_depth = hist,s3,s3,1,100,s3.s3.depth.txt,65->95,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,2:2
+plot_depth = hist,s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3,3:3
+#plot_depth = scatter,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+plot_depth = scatter_line,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+plot_depth = hist,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
 sr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50
 lr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50
