--- a/example/s3.s3.1.2.ytick.setting.conf
+++ b/example/s3.s3.1.2.ytick.setting.conf
@@ -3,8 +3,8 @@ s3.s3.1.11.2010.2	feature_height_ratio	30
 
 s3.s3.1.11.2010.2	feature_height_unit	percent
 s3.s3.1.11.2010.2	feature_shape	rect
-s3.s3.1.11.2010.2	feature_shift_x	20
-s3.s3.1.11.2010.2	feature_shift_y	-80.5
+s3.s3.1.11.2010.2	feature_shift_x	6
+s3.s3.1.11.2010.2	feature_shift_y	-80
 s3.s3.1.11.2010.2	feature_shift_y_unit	percent
 s3.s3.1.11.2010.2	display_feature_label	no
 s3.s3.1.11.2010.2	pos_feature_label	right_medium
@@ -12,7 +12,7 @@ s3.s3.1.11.2010.2	feature_label	ytick_label
 s3.s3.1.11.2010.2	feature_color	green
 s3.s3.1.11.2010.2	feature_opacity	1
 
-s3.s3.1.11.2010.2.tick0.hgrid	feature_height_ratio	0.5
+s3.s3.1.11.2010.2.tick0.hgrid	feature_height_ratio	0.09
 
 s3.s3.1.11.2010.2.tick0.hgrid	feature_height_unit	percent
 s3.s3.1.11.2010.2.tick0.hgrid	feature_shape	rect
@@ -22,19 +22,19 @@ s3.s3.1.11.2010.2.tick0.hgrid	feature_shift_y	-65
 s3.s3.1.11.2010.2.tick0.hgrid	feature_shift_y_unit	percent
 s3.s3.1.11.2010.2.tick0.hgrid	feature_color	black
 
-s3.s3.1.11.2010.2.tick0	feature_height_ratio	1
+s3.s3.1.11.2010.2.tick0	feature_height_ratio	0.3
 
 s3.s3.1.11.2010.2.tick0	feature_height_unit	percent
 s3.s3.1.11.2010.2.tick0	feature_shape	rect
-s3.s3.1.11.2010.2.tick0	feature_shift_x	80
+s3.s3.1.11.2010.2.tick0	feature_shift_x	24
 s3.s3.1.11.2010.2.tick0	feature_shift_y	-65
 s3.s3.1.11.2010.2.tick0	feature_shift_y_unit	percent
 s3.s3.1.11.2010.2.tick0	display_feature_label	yes
 s3.s3.1.11.2010.2.tick0	feature_label	20
 s3.s3.1.11.2010.2.tick0	pos_feature_label	right_medium
 s3.s3.1.11.2010.2.tick0	label_rotate_angle	0
-s3.s3.1.11.2010.2.tick0	feature_label_size	6
-s3.s3.1.11.2010.2.tick0	padding_feature_label	1.8
+s3.s3.1.11.2010.2.tick0	feature_label_size	2
+s3.s3.1.11.2010.2.tick0	padding_feature_label	0.6
 s3.s3.1.11.2010.2.tick0	feature_label_auto_angle_flag	0
 
 s3.s3.1.11.2010.2.tick0	feature_color	green
@@ -42,29 +42,29 @@ s3.s3.1.11.2010.2.tick0	feature_color	green
 s3.s3.1.11.2010.2.tick0	feature_opacity	1
 
 
-s3.s3.1.11.2010.2.tick1.hgrid	feature_height_ratio	0.5
+s3.s3.1.11.2010.2.tick1.hgrid	feature_height_ratio	0.09
 
 s3.s3.1.11.2010.2.tick1.hgrid	feature_height_unit	percent
 s3.s3.1.11.2010.2.tick1.hgrid	feature_shape	rect
 s3.s3.1.11.2010.2.tick1.hgrid	display_feature_label	no
 s3.s3.1.11.2010.2.tick1.hgrid	feature_opacity	0.5
-s3.s3.1.11.2010.2.tick1.hgrid	feature_shift_y	-75
+s3.s3.1.11.2010.2.tick1.hgrid	feature_shift_y	-68
 s3.s3.1.11.2010.2.tick1.hgrid	feature_shift_y_unit	percent
 s3.s3.1.11.2010.2.tick1.hgrid	feature_color	black
 
-s3.s3.1.11.2010.2.tick1	feature_height_ratio	1
+s3.s3.1.11.2010.2.tick1	feature_height_ratio	0.3
 
 s3.s3.1.11.2010.2.tick1	feature_height_unit	percent
 s3.s3.1.11.2010.2.tick1	feature_shape	rect
-s3.s3.1.11.2010.2.tick1	feature_shift_x	80
-s3.s3.1.11.2010.2.tick1	feature_shift_y	-75
+s3.s3.1.11.2010.2.tick1	feature_shift_x	24
+s3.s3.1.11.2010.2.tick1	feature_shift_y	-68
 s3.s3.1.11.2010.2.tick1	feature_shift_y_unit	percent
 s3.s3.1.11.2010.2.tick1	display_feature_label	yes
-s3.s3.1.11.2010.2.tick1	feature_label	23
+s3.s3.1.11.2010.2.tick1	feature_label	21
 s3.s3.1.11.2010.2.tick1	pos_feature_label	right_medium
 s3.s3.1.11.2010.2.tick1	label_rotate_angle	0
-s3.s3.1.11.2010.2.tick1	feature_label_size	6
-s3.s3.1.11.2010.2.tick1	padding_feature_label	1.8
+s3.s3.1.11.2010.2.tick1	feature_label_size	2
+s3.s3.1.11.2010.2.tick1	padding_feature_label	0.6
 s3.s3.1.11.2010.2.tick1	feature_label_auto_angle_flag	0
 
 s3.s3.1.11.2010.2.tick1	feature_color	green
@@ -72,29 +72,29 @@ s3.s3.1.11.2010.2.tick1	feature_color	green
 s3.s3.1.11.2010.2.tick1	feature_opacity	1
 
 
-s3.s3.1.11.2010.2.tick2.hgrid	feature_height_ratio	0.5
+s3.s3.1.11.2010.2.tick2.hgrid	feature_height_ratio	0.09
 
 s3.s3.1.11.2010.2.tick2.hgrid	feature_height_unit	percent
 s3.s3.1.11.2010.2.tick2.hgrid	feature_shape	rect
 s3.s3.1.11.2010.2.tick2.hgrid	display_feature_label	no
 s3.s3.1.11.2010.2.tick2.hgrid	feature_opacity	0.5
-s3.s3.1.11.2010.2.tick2.hgrid	feature_shift_y	-85
+s3.s3.1.11.2010.2.tick2.hgrid	feature_shift_y	-71
 s3.s3.1.11.2010.2.tick2.hgrid	feature_shift_y_unit	percent
 s3.s3.1.11.2010.2.tick2.hgrid	feature_color	black
 
-s3.s3.1.11.2010.2.tick2	feature_height_ratio	1
+s3.s3.1.11.2010.2.tick2	feature_height_ratio	0.3
 
 s3.s3.1.11.2010.2.tick2	feature_height_unit	percent
 s3.s3.1.11.2010.2.tick2	feature_shape	rect
-s3.s3.1.11.2010.2.tick2	feature_shift_x	80
-s3.s3.1.11.2010.2.tick2	feature_shift_y	-85
+s3.s3.1.11.2010.2.tick2	feature_shift_x	24
+s3.s3.1.11.2010.2.tick2	feature_shift_y	-71
 s3.s3.1.11.2010.2.tick2	feature_shift_y_unit	percent
 s3.s3.1.11.2010.2.tick2	display_feature_label	yes
-s3.s3.1.11.2010.2.tick2	feature_label	26
+s3.s3.1.11.2010.2.tick2	feature_label	22
 s3.s3.1.11.2010.2.tick2	pos_feature_label	right_medium
 s3.s3.1.11.2010.2.tick2	label_rotate_angle	0
-s3.s3.1.11.2010.2.tick2	feature_label_size	6
-s3.s3.1.11.2010.2.tick2	padding_feature_label	1.8
+s3.s3.1.11.2010.2.tick2	feature_label_size	2
+s3.s3.1.11.2010.2.tick2	padding_feature_label	0.6
 s3.s3.1.11.2010.2.tick2	feature_label_auto_angle_flag	0
 
 s3.s3.1.11.2010.2.tick2	feature_color	green
@@ -102,32 +102,242 @@ s3.s3.1.11.2010.2.tick2	feature_color	green
 s3.s3.1.11.2010.2.tick2	feature_opacity	1
 
 
-s3.s3.1.11.2010.2.tick3.hgrid	feature_height_ratio	0.5
+s3.s3.1.11.2010.2.tick3.hgrid	feature_height_ratio	0.09
 
 s3.s3.1.11.2010.2.tick3.hgrid	feature_height_unit	percent
 s3.s3.1.11.2010.2.tick3.hgrid	feature_shape	rect
 s3.s3.1.11.2010.2.tick3.hgrid	display_feature_label	no
 s3.s3.1.11.2010.2.tick3.hgrid	feature_opacity	0.5
-s3.s3.1.11.2010.2.tick3.hgrid	feature_shift_y	-95
+s3.s3.1.11.2010.2.tick3.hgrid	feature_shift_y	-74
 s3.s3.1.11.2010.2.tick3.hgrid	feature_shift_y_unit	percent
 s3.s3.1.11.2010.2.tick3.hgrid	feature_color	black
 
-s3.s3.1.11.2010.2.tick3	feature_height_ratio	1
+s3.s3.1.11.2010.2.tick3	feature_height_ratio	0.3
 
 s3.s3.1.11.2010.2.tick3	feature_height_unit	percent
 s3.s3.1.11.2010.2.tick3	feature_shape	rect
-s3.s3.1.11.2010.2.tick3	feature_shift_x	80
-s3.s3.1.11.2010.2.tick3	feature_shift_y	-95
+s3.s3.1.11.2010.2.tick3	feature_shift_x	24
+s3.s3.1.11.2010.2.tick3	feature_shift_y	-74
 s3.s3.1.11.2010.2.tick3	feature_shift_y_unit	percent
 s3.s3.1.11.2010.2.tick3	display_feature_label	yes
-s3.s3.1.11.2010.2.tick3	feature_label	30
+s3.s3.1.11.2010.2.tick3	feature_label	23
 s3.s3.1.11.2010.2.tick3	pos_feature_label	right_medium
 s3.s3.1.11.2010.2.tick3	label_rotate_angle	0
-s3.s3.1.11.2010.2.tick3	feature_label_size	6
-s3.s3.1.11.2010.2.tick3	padding_feature_label	1.8
+s3.s3.1.11.2010.2.tick3	feature_label_size	2
+s3.s3.1.11.2010.2.tick3	padding_feature_label	0.6
 s3.s3.1.11.2010.2.tick3	feature_label_auto_angle_flag	0
 
 s3.s3.1.11.2010.2.tick3	feature_color	green
 
 s3.s3.1.11.2010.2.tick3	feature_opacity	1
+
+
+s3.s3.1.11.2010.2.tick4.hgrid	feature_height_ratio	0.09
+
+s3.s3.1.11.2010.2.tick4.hgrid	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick4.hgrid	feature_shape	rect
+s3.s3.1.11.2010.2.tick4.hgrid	display_feature_label	no
+s3.s3.1.11.2010.2.tick4.hgrid	feature_opacity	0.5
+s3.s3.1.11.2010.2.tick4.hgrid	feature_shift_y	-77
+s3.s3.1.11.2010.2.tick4.hgrid	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick4.hgrid	feature_color	black
+
+s3.s3.1.11.2010.2.tick4	feature_height_ratio	0.3
+
+s3.s3.1.11.2010.2.tick4	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick4	feature_shape	rect
+s3.s3.1.11.2010.2.tick4	feature_shift_x	24
+s3.s3.1.11.2010.2.tick4	feature_shift_y	-77
+s3.s3.1.11.2010.2.tick4	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick4	display_feature_label	yes
+s3.s3.1.11.2010.2.tick4	feature_label	24
+s3.s3.1.11.2010.2.tick4	pos_feature_label	right_medium
+s3.s3.1.11.2010.2.tick4	label_rotate_angle	0
+s3.s3.1.11.2010.2.tick4	feature_label_size	2
+s3.s3.1.11.2010.2.tick4	padding_feature_label	0.6
+s3.s3.1.11.2010.2.tick4	feature_label_auto_angle_flag	0
+
+s3.s3.1.11.2010.2.tick4	feature_color	green
+
+s3.s3.1.11.2010.2.tick4	feature_opacity	1
+
+
+s3.s3.1.11.2010.2.tick5.hgrid	feature_height_ratio	0.09
+
+s3.s3.1.11.2010.2.tick5.hgrid	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick5.hgrid	feature_shape	rect
+s3.s3.1.11.2010.2.tick5.hgrid	display_feature_label	no
+s3.s3.1.11.2010.2.tick5.hgrid	feature_opacity	0.5
+s3.s3.1.11.2010.2.tick5.hgrid	feature_shift_y	-80
+s3.s3.1.11.2010.2.tick5.hgrid	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick5.hgrid	feature_color	black
+
+s3.s3.1.11.2010.2.tick5	feature_height_ratio	0.3
+
+s3.s3.1.11.2010.2.tick5	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick5	feature_shape	rect
+s3.s3.1.11.2010.2.tick5	feature_shift_x	24
+s3.s3.1.11.2010.2.tick5	feature_shift_y	-80
+s3.s3.1.11.2010.2.tick5	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick5	display_feature_label	yes
+s3.s3.1.11.2010.2.tick5	feature_label	25
+s3.s3.1.11.2010.2.tick5	pos_feature_label	right_medium
+s3.s3.1.11.2010.2.tick5	label_rotate_angle	0
+s3.s3.1.11.2010.2.tick5	feature_label_size	2
+s3.s3.1.11.2010.2.tick5	padding_feature_label	0.6
+s3.s3.1.11.2010.2.tick5	feature_label_auto_angle_flag	0
+
+s3.s3.1.11.2010.2.tick5	feature_color	green
+
+s3.s3.1.11.2010.2.tick5	feature_opacity	1
+
+
+s3.s3.1.11.2010.2.tick6.hgrid	feature_height_ratio	0.09
+
+s3.s3.1.11.2010.2.tick6.hgrid	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick6.hgrid	feature_shape	rect
+s3.s3.1.11.2010.2.tick6.hgrid	display_feature_label	no
+s3.s3.1.11.2010.2.tick6.hgrid	feature_opacity	0.5
+s3.s3.1.11.2010.2.tick6.hgrid	feature_shift_y	-83
+s3.s3.1.11.2010.2.tick6.hgrid	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick6.hgrid	feature_color	black
+
+s3.s3.1.11.2010.2.tick6	feature_height_ratio	0.3
+
+s3.s3.1.11.2010.2.tick6	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick6	feature_shape	rect
+s3.s3.1.11.2010.2.tick6	feature_shift_x	24
+s3.s3.1.11.2010.2.tick6	feature_shift_y	-83
+s3.s3.1.11.2010.2.tick6	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick6	display_feature_label	yes
+s3.s3.1.11.2010.2.tick6	feature_label	26
+s3.s3.1.11.2010.2.tick6	pos_feature_label	right_medium
+s3.s3.1.11.2010.2.tick6	label_rotate_angle	0
+s3.s3.1.11.2010.2.tick6	feature_label_size	2
+s3.s3.1.11.2010.2.tick6	padding_feature_label	0.6
+s3.s3.1.11.2010.2.tick6	feature_label_auto_angle_flag	0
+
+s3.s3.1.11.2010.2.tick6	feature_color	green
+
+s3.s3.1.11.2010.2.tick6	feature_opacity	1
+
+
+s3.s3.1.11.2010.2.tick7.hgrid	feature_height_ratio	0.09
+
+s3.s3.1.11.2010.2.tick7.hgrid	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick7.hgrid	feature_shape	rect
+s3.s3.1.11.2010.2.tick7.hgrid	display_feature_label	no
+s3.s3.1.11.2010.2.tick7.hgrid	feature_opacity	0.5
+s3.s3.1.11.2010.2.tick7.hgrid	feature_shift_y	-86
+s3.s3.1.11.2010.2.tick7.hgrid	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick7.hgrid	feature_color	black
+
+s3.s3.1.11.2010.2.tick7	feature_height_ratio	0.3
+
+s3.s3.1.11.2010.2.tick7	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick7	feature_shape	rect
+s3.s3.1.11.2010.2.tick7	feature_shift_x	24
+s3.s3.1.11.2010.2.tick7	feature_shift_y	-86
+s3.s3.1.11.2010.2.tick7	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick7	display_feature_label	yes
+s3.s3.1.11.2010.2.tick7	feature_label	27
+s3.s3.1.11.2010.2.tick7	pos_feature_label	right_medium
+s3.s3.1.11.2010.2.tick7	label_rotate_angle	0
+s3.s3.1.11.2010.2.tick7	feature_label_size	2
+s3.s3.1.11.2010.2.tick7	padding_feature_label	0.6
+s3.s3.1.11.2010.2.tick7	feature_label_auto_angle_flag	0
+
+s3.s3.1.11.2010.2.tick7	feature_color	green
+
+s3.s3.1.11.2010.2.tick7	feature_opacity	1
+
+
+s3.s3.1.11.2010.2.tick8.hgrid	feature_height_ratio	0.09
+
+s3.s3.1.11.2010.2.tick8.hgrid	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick8.hgrid	feature_shape	rect
+s3.s3.1.11.2010.2.tick8.hgrid	display_feature_label	no
+s3.s3.1.11.2010.2.tick8.hgrid	feature_opacity	0.5
+s3.s3.1.11.2010.2.tick8.hgrid	feature_shift_y	-89
+s3.s3.1.11.2010.2.tick8.hgrid	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick8.hgrid	feature_color	black
+
+s3.s3.1.11.2010.2.tick8	feature_height_ratio	0.3
+
+s3.s3.1.11.2010.2.tick8	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick8	feature_shape	rect
+s3.s3.1.11.2010.2.tick8	feature_shift_x	24
+s3.s3.1.11.2010.2.tick8	feature_shift_y	-89
+s3.s3.1.11.2010.2.tick8	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick8	display_feature_label	yes
+s3.s3.1.11.2010.2.tick8	feature_label	28
+s3.s3.1.11.2010.2.tick8	pos_feature_label	right_medium
+s3.s3.1.11.2010.2.tick8	label_rotate_angle	0
+s3.s3.1.11.2010.2.tick8	feature_label_size	2
+s3.s3.1.11.2010.2.tick8	padding_feature_label	0.6
+s3.s3.1.11.2010.2.tick8	feature_label_auto_angle_flag	0
+
+s3.s3.1.11.2010.2.tick8	feature_color	green
+
+s3.s3.1.11.2010.2.tick8	feature_opacity	1
+
+
+s3.s3.1.11.2010.2.tick9.hgrid	feature_height_ratio	0.09
+
+s3.s3.1.11.2010.2.tick9.hgrid	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick9.hgrid	feature_shape	rect
+s3.s3.1.11.2010.2.tick9.hgrid	display_feature_label	no
+s3.s3.1.11.2010.2.tick9.hgrid	feature_opacity	0.5
+s3.s3.1.11.2010.2.tick9.hgrid	feature_shift_y	-92
+s3.s3.1.11.2010.2.tick9.hgrid	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick9.hgrid	feature_color	black
+
+s3.s3.1.11.2010.2.tick9	feature_height_ratio	0.3
+
+s3.s3.1.11.2010.2.tick9	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick9	feature_shape	rect
+s3.s3.1.11.2010.2.tick9	feature_shift_x	24
+s3.s3.1.11.2010.2.tick9	feature_shift_y	-92
+s3.s3.1.11.2010.2.tick9	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick9	display_feature_label	yes
+s3.s3.1.11.2010.2.tick9	feature_label	29
+s3.s3.1.11.2010.2.tick9	pos_feature_label	right_medium
+s3.s3.1.11.2010.2.tick9	label_rotate_angle	0
+s3.s3.1.11.2010.2.tick9	feature_label_size	2
+s3.s3.1.11.2010.2.tick9	padding_feature_label	0.6
+s3.s3.1.11.2010.2.tick9	feature_label_auto_angle_flag	0
+
+s3.s3.1.11.2010.2.tick9	feature_color	green
+
+s3.s3.1.11.2010.2.tick9	feature_opacity	1
+
+
+s3.s3.1.11.2010.2.tick10.hgrid	feature_height_ratio	0.09
+
+s3.s3.1.11.2010.2.tick10.hgrid	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick10.hgrid	feature_shape	rect
+s3.s3.1.11.2010.2.tick10.hgrid	display_feature_label	no
+s3.s3.1.11.2010.2.tick10.hgrid	feature_opacity	0.5
+s3.s3.1.11.2010.2.tick10.hgrid	feature_shift_y	-95
+s3.s3.1.11.2010.2.tick10.hgrid	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick10.hgrid	feature_color	black
+
+s3.s3.1.11.2010.2.tick10	feature_height_ratio	0.3
+
+s3.s3.1.11.2010.2.tick10	feature_height_unit	percent
+s3.s3.1.11.2010.2.tick10	feature_shape	rect
+s3.s3.1.11.2010.2.tick10	feature_shift_x	24
+s3.s3.1.11.2010.2.tick10	feature_shift_y	-95
+s3.s3.1.11.2010.2.tick10	feature_shift_y_unit	percent
+s3.s3.1.11.2010.2.tick10	display_feature_label	yes
+s3.s3.1.11.2010.2.tick10	feature_label	30
+s3.s3.1.11.2010.2.tick10	pos_feature_label	right_medium
+s3.s3.1.11.2010.2.tick10	label_rotate_angle	0
+s3.s3.1.11.2010.2.tick10	feature_label_size	2
+s3.s3.1.11.2010.2.tick10	padding_feature_label	0.6
+s3.s3.1.11.2010.2.tick10	feature_label_auto_angle_flag	0
+
+s3.s3.1.11.2010.2.tick10	feature_color	green
+
+s3.s3.1.11.2010.2.tick10	feature_opacity	1
 
