--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -116,12 +116,12 @@ scale_tick_fontsize=13
 #depth_hist = s2,s2000,0,100,path_map.sort.bam,0->50,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:black,1:0.3,1:0.5
 #depth_hist = s2,s2000,0,100,path_map.sort.bam,60->90,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:green,1:0.3,1:0.5
 #$sample,$scf,$block_flag,$window_size,$depth_file,$yaxis,$ytick_flag,$yaxis_show,$ytick_label,$hgrid_flag,$tick_color,$tick_opacity,$tick_border,$label_size
-plot_depth = hist,s3,s3,1,100,s3.s3.depth.txt,5->55,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	highlight:26:2:green,hightlight:28:2:black
-plot_depth = hist,s3,s3,1,100,s3.s3.depth.txt,65->95,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,2:2
-plot_depth = hist,s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3,3:3
+plot_depth = hist,s3,s3,1,100,s3.s3.depth.txt,5->55,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	highlight:26:2:green,hightlight:28:2:black
+plot_depth = hist,s3,s3,1,100,s3.s3.depth.txt,65->95,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,2:2
+plot_depth = hist,s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3,3:3
 #plot_depth = scatter,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
-plot_depth = scatter_line,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
-plot_depth = hist,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+plot_depth = scatter_line,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+plot_depth = hist,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
 sr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50
 lr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50
