--- a/example/main.11.conf
+++ b/example/main.11.conf
@@ -1,11 +1,11 @@
 # output figure size
-svg_width_height = 1500,500 # *
+svg_width_height = 1000,800 # *
 pdf_dpi = 100
 svg_background_color = white #background color of whole figure
 
 # plot feature type
 feature_keywords = gene,circle,ytick,plot_depth,long_read,xxxxx # *, gene,point,hist,heatmap
-feature_setting = feature.color.label.conf10.new # *
+feature_setting = feature.color.label.conf11.new # *
 
 # figure width layout
 width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # 0.1+0.75+0.15=1
@@ -21,13 +21,14 @@ feature_label_color=black
 feature_shift_y=0 # unit is feature_shift_y_unit 
 feature_shift_y_unit=backbone # backbone or radius or percent, backbone is genome_height_ratio
 feature_shift_x=0 # unit is bp
-feature_height_ratio=3 # defined feature height
+feature_height_ratio=5 # defined feature height
+feature_height_unit=percent
 track_style= fill:blue;opacity:0.2 # fill:blue;stroke:pink;stroke-width:5;fill-opacity:0.1;stroke-opacity:0.9
 feature_color=rgb(50,205,50)
 feature_border_size=0
 feature_border_color=black 
-genome_height_ratio=1 # mean genome height extend ratio
-feature_arrow_sharp_extent=1 # bigger mean sharper arrow
+genome_height_ratio=5 # mean genome height extend ratio
+feature_arrow_sharp_extent=0 # bigger mean sharper arrow
 # order for display
 track_order=1
 feature_order=2
@@ -64,7 +65,7 @@ space_between_blocks = 500 # bp, mean space of every block in one track
 default_legend = other
 
 # new sample name
-sample_name_old2new = sample.name.new.conf
+#sample_name_old2new = sample.name.new.conf
 sample_name_color_default = black
 sample_name_font_size_default = 15 
 
@@ -80,7 +81,7 @@ legend_stroke_color=black
 legend_stroke_width=0.5
 
 # crossling among features
-crossing_link = feature.crossing.link.conf10
+#crossing_link = feature.crossing.link.conf9.new
 cross_link_color = #FF8C00
 cross_link_opacity = 1
 cross_link_anchor_pos = low_up # up,medium,low
@@ -99,7 +100,7 @@ scale_display=yes # yes or no
 scale_position=low # up or low or up_low
 scale_color=green
 scale_width=0.5
-scale_ratio=2000 # bp
+scale_ratio=100 # bp
 scale_padding_y=0.6
 scale_tick_opacity=1
 scale_tick_height=0.01
@@ -118,21 +119,22 @@ scale_tick_fontsize=13
 #$sample,$scf,$block_flag,$window_size,$depth_file,$yaxis,$ytick_flag,$yaxis_show,$ytick_label,$hgrid_flag,$tick_color,$tick_opacity,$tick_border,$label_size
 
 
-plot_depth = hist,1,s3,s3,1,100,s3.s3.depth.txt,5->55,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	highlight_hgrid->26:2:green,28:2:black    highlight_columns->0:20:green:0.7,20:100:black:0.5 start_end_xaxis->111:511,711:1111,1211:1911
-plot_depth = hist,1,s3,s3,1,100,s3.s3.depth.txt,65->95,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,2:2
-plot_depth = hist,1,s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,5:5:2:0.2,3:3
+#plot_depth = hist,1,s3,s3,1,100,s3.s3.depth.txt,5->55,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	highlight_hgrid->26:2:green,28:2:black    highlight_columns->0:20:green:0.7,20:100:black:0.5 start_end_xaxis->111:511,711:1111,1211:1911
+#plot_depth = hist,1,s3,s3,1,100,s3.s3.depth.txt,65->95,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,2:2
+#plot_depth = hist,1,s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3,3:3
 
-plot_depth = scatter,1,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
-plot_depth = scatter_line,1,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
-plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
+#plot_depth = scatter,1,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+#plot_depth = scatter_line,1,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+#plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
 #plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,-55->-90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
-plot_depth = hist,1,s2,s2,1,50,../data/s2.seq.sam.sorted.bam,15->80,ytick_flag,10->120->10,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
+#plot_depth = hist,1,s2,s2,1,50,../data/s2.seq.sam.sorted.bam,15->80,ytick_flag,10->120->10,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
-reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,55->85,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	 start_end_xaxis->3000:4000,4500:5500
-reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,20->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	 start_end_xaxis->2000:6000
-reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,23->80,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	 start_end_xaxis->2000:6000
-
+#reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,55->85,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->3000:4000,4500:5500
+#reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,20->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
+#reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,23->80,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
+reads_mapping=long_reads,1,chr14,14,0,../../genomeview/genomeview/examples/data/pacbio.chr14.sort.bam,rainbow_or_hline,15->1250,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15 # $tick_color, $tick_opacity, $tick_border, tick_label_size
+tracks_shift_y=chr14,0,+12 #sample2,block_index2,+0.3;sample2,block_index2,-0.1
 
 
