--- a/example/main.7.conf
+++ b/example/main.7.conf
@@ -1,5 +1,5 @@
 # output figure size
-svg_width_height = 1500,800 # *
+svg_width_height = 1200,600 # *
 pdf_dpi = 100
 
 # plot feature type
@@ -105,3 +105,8 @@ synteny = order->1,query->s1:target->s2,../data/s1.mapto.s2.paf.gz,paf,quadrilat
 #synteny = order->1,query->s2:target->s3,../data/s2.mapto.s3.paf.gz,paf,quadrilateral,forward->yellow->opacity1,reverse->blue->opacity1
 synteny = order->0,query->s2:target->s4,../data/s2.mapto.s4.paf.gz,paf,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3
 
+#reads_mapping=short_reads,1,s4,s4000,0,../data/s4.seq.sam.sorted.bam:../data/s4.seq,rainbow:color->blue:opacity->0.5:cross_link_width_ellipse->0.05,-55->-100,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0:10:40	ylabel->illuminate read mapping,gap:150bp,fontsize:10,color:green
+
+#reads_mapping=long_reads,1,s4,s4000,0,../data/s4.seq.longreads.map2ref.sort.bam:../data/s4.seq,stack,-10->-50,0,20->30->2,ytick_label_text,0,green:black,1:1,2:6:0.2:0,15:15,0:10:40	color_height_cs->M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:6bp:rect,D:black:opacity1:height0.8:3bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.4:10bp:rect,H:blue:opacity0.6:height0.2:10bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:6bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0:0bp:rect	ylabel->pacbio read mapping,gap:150bp,fontsize:13,color:black
+
+tracks_shift_y=s4,0,+0:+4,
