--- a/example/main.6.conf
+++ b/example/main.6.conf
@@ -5,8 +5,9 @@ synteny = order->0->1,query->pO83_CORR.indel:target->pO83_CORR,../data/NC_017659
 synteny = order->0->1,query->pO83_CORR.indel:target->pO83_CORR.indel.reverse,../data/NC_017659.1.indel.fa.to.self.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
 
 
-#tracks_block_reverse=pO83_CORR.indel.reverse,0;
+tracks_block_reverse=pO83_CORR.indel.reverse,0;
 feature_id_is_unique = no
+display_segment_name=yes,center,shift_y:+2,fontsize:6,color:black,order:5,rotate:0
 
 
 
