--- a/example/main.3.conf
+++ b/example/main.3.conf
@@ -6,14 +6,14 @@ reads_mapping=long_reads,1,chr14,14,0,../data/pacbio.chr14.sort.bam:../data/chr1
 
 
 ## short pair-end reads mapping as pair
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../data/chr14.fa,paired:color->Orange:opacity->1:cross_link_height_line->0.3,72->110,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	ylabel->illuminate read mapping paired,gap:60bp,fontsize:13,color:black
+reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../data/chr14.fa,paired:color->Orange:opacity->1:cross_link_height_line->0.3,79->117,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	ylabel->illuminate read mapping paired,gap:60bp,fontsize:13,color:black
 
 ## short pair-end reads mapping as stack
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../data/chr14.fa,stack,45->70,0,32->51->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	ylabel->illumnate read mapping stack,gap:60bp,fontsize:13,color:black
+reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../data/chr14.fa,stack,53->77,0,32->51->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	ylabel->illumnate read mapping stack,gap:60bp,fontsize:13,color:black
 
 ## short reads depth
-hist_scatter_line = hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam.depth.txt:../data/chr14.fa,color->black:opacity->1,31->41,0,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3:0.1:0.1,5:5 
-hist_scatter_line = hist,2,chr14,14,0,20,../data/illumina.chr14.sort.bam:../data/chr14.fa,color->green:opacity->1,31->41,ytick_flag,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.6:0.6:0.2:0.2,5:5	ylabel->illuminate read depth,gap:60bp,fontsize:13,color:black	start_end_xaxis->66901400:66902400
+hist_scatter_line = hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam.depth.txt:../data/chr14.fa,color->black:opacity->1,31->41,1,25->5->10,ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1:0.2:0.3,5:8	ylabel->illuminate read depth,gap:60bp,fontsize:13,color:black	start_end_xaxis->66901400:66902400
+hist_scatter_line = hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam.depth.txt:../data/chr14.fa,color->green:opacity->1,42->52,1,5->25->5,ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1:0.2:0.3,5:8	start_end_xaxis->66902401:66903400
 
 
 ## short pair-end reads mappng as rainbow
